# Copyright 2018-2020 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_indexeddb"
version = "0.1.0"
edition = "2018"
description = "IndexDB API implementation for Deno"
authors = ["the Deno authors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/deno"

[lib]
path = "lib.rs"

[dependencies]
deno_core = { version = "0.83.0", path = "../../core" }
rusqlite = "0.25.0"
serde = { version = "1.0.123", features = ["derive"] }
